# cstd-dmytrivar-2122

./: .gitignore  CMakeLists.txt  Makefile  README.ML  ci.sh  client.py
client_sw/: client.py  db_connector.py  last_game.save  utils_client.py
include/: battle_cli.h  battle_ship.h  battle_ship_ai.h  battle_utils.h
src/: battle_cli.c  battle_cli.cpp  battle_cli.h  battle_main.cpp  battle_ship.c  battle_ship.cpp  battle_ship.h  battle_ship_ai.c  battle_ship_ai.cpp  battle_ship_ai.h  battle_utils.cpp  battle_utils.h  main.c
tests/: CMakeLists.txt  main_test.cpp  manual_testing_serial.ML
